# knowledge-base

./: .gitignore  CHANGELOG.md  OPTIMIZATION_REPORT.md  README.md  docker-compose.yml  start.bat  stop.bat
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  ai.py  api_routes.py  approval.py  auth.py  batch_tools.py  comments.py  documents.py  folders.py  graph.py  import_batch.py  maintenance.py  plugins.py  prompts.py  rag.py  recommendations.py  settings.py  tags.py  workflows.py
backend/app/core/: api_versioning.py  config.py  database.py  deps.py  events.py  limiter.py  security.py  version.py
backend/app/mcp/: __init__.py  auth_context.py  prompts.py  resources.py  server.py  stdio_server.py
backend/app/models/: __init__.py  analytics.py  api_endpoint.py  collaboration.py  document.py  document_chunk.py  export_job.py  (+8 more)
backend/migrations/: 001_add_version_title.sql  002_knowledge_graph.sql  003_import_batch.sql
backend/tests/: conftest.py  test_admin.py  test_ai_pipeline.py  test_auth.py  test_chunking.py  test_core_engines.py  test_documents.py  test_documents_security.py  test_edge_cases.py  test_embedding_service.py  test_export_formats.py  test_folders_api.py  test_graph.py  test_health.py  test_import_batch.py  test_llm_service.py  test_maintenance_api.py  test_markdown_import.py  test_production_fixes.py  test_prompt_registry.py  test_rag_api.py  test_rate_limiting.py  test_settings_and_parser.py  test_tags_api.py  test_token_expiry.py  test_workflow_engine.py  test_workflows_api.py
(+236 files in other folders)
