[project]
name = "knowledge-base-backend"
version = "0.1.0"
description = "AI-powered knowledge base management backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "PyJWT>=2.10.0",
    "slowapi>=0.1.9",
    "openai>=1.58.0",
    "anthropic>=0.42.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.10.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
ai = [
    "sentence-transformers>=3.3.0",
    "instructor>=1.7.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
